// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZForm demo -- base 1`] = `
.emotion-45 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-45 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-45 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-45 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

<form
  class="uc-fe-form emotion-45 emotion-46"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_3
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      checkbox_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- name 1`] = `
.emotion-81 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-81 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-81 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-81 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

<form
  class="uc-fe-form emotion-81 emotion-82"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 0
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      input 2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox first
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox second
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      checkbox third
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      a.b.c.d
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      r[0][1][2][3]
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      z[0].a[1].b[2]
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- rule 1`] = `
.emotion-54 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-54 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-54 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-54 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-7 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7:before,
.emotion-7:after {
  content: ' ';
  display: table;
}

.emotion-7:after {
  clear: both;
}

.emotion-7 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.emotion-4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

<form
  class="uc-fe-form emotion-54 emotion-55"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      input_3
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      select_1
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <select>
        <option>
          请选择
        </option>
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
      </select>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-6 emotion-7 emotion-8"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="1"
    >
      select_2
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-3 emotion-4 emotion-2"
      span="5"
    >
      <select>
        <option>
          请选择
        </option>
        <option
          selected=""
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
      </select>
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- uhost 1`] = `
.emotion-171 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-171 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-85 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-85:before,
.emotion-85:after {
  content: ' ';
  display: table;
}

.emotion-85:after {
  clear: both;
}

.emotion-85 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-82 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-82 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-79 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-79 .uc-fe-radio-styletype-default,
.emotion-79 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-79 .uc-fe-radio-styletype-default:last-child,
.emotion-79 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-79 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-79 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-79 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-79 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-79 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-79 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  border-color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-5:hover {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-5.emotion-5 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  z-index: 2;
}

.emotion-5.emotion-5:hover {
  z-index: 3;
}

.emotion-9 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.emotion-9:hover {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-9.emotion-9 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.emotion-9.emotion-9:hover {
  z-index: 3;
}

.emotion-134 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-134:hover {
  border-color: #3357df;
}

.emotion-134:hover .emotion-131 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-134 .emotion-131 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-134 .emotion-129 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-134 .emotion-133 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-134 .emotion-125,
.emotion-134 .emotion-127 {
  line-height: 16px;
}

.emotion-134 .emotion-125 {
  padding-right: 20px;
}

.emotion-134 .emotion-127 {
  padding-left: 20px;
}

.emotion-134 .emotion-125 {
  display: none;
}

.emotion-132 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-124 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-126 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-130 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-128 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-161 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-159 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-159:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-156 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-169 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-169:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-171 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-171 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-85 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-85:before,
.emotion-85:after {
  content: ' ';
  display: table;
}

.emotion-85:after {
  clear: both;
}

.emotion-85 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-82 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-82 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-79 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-79 .uc-fe-radio-styletype-default,
.emotion-79 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-79 .uc-fe-radio-styletype-default:last-child,
.emotion-79 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-79 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-79 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-79 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-79 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-79 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-79 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  border-color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-5:hover {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-5.emotion-5 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  z-index: 2;
}

.emotion-5.emotion-5:hover {
  z-index: 3;
}

.emotion-9 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  padding-left: 7px;
  padding-right: 7px;
}

.emotion-9:hover {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-9.emotion-9 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.emotion-9.emotion-9:hover {
  z-index: 3;
}

.emotion-134 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-134:hover {
  border-color: #3357df;
}

.emotion-134:hover .emotion-131 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-134 .emotion-131 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-134 .emotion-129 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-134 .emotion-133 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-134 .emotion-125,
.emotion-134 .emotion-127 {
  line-height: 16px;
}

.emotion-134 .emotion-125 {
  padding-right: 20px;
}

.emotion-134 .emotion-127 {
  padding-left: 20px;
}

.emotion-134 .emotion-125 {
  display: none;
}

.emotion-132 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-124 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-126 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-130 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-128 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-161 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-159 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-159:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-156 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-169 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-169:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

<form
  class="uc-fe-form emotion-171 emotion-172"
>
  <div
    class="uc-fe-row uc-fe-form-item emotion-84 emotion-85 emotion-86"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      地域
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-81 emotion-82 emotion-2"
      span="10"
    >
      <div
        class="emotion-79 emotion-80"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5 emotion-6"
          type="button"
        >
          cn-zj
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          cn-bj1
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          hk
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          cn-bj2
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          us-ca
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          cn-gd
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          cn-sh
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          cn-sh2
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          us-ws
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          ge-fra
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          th-bkk
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          kr-seoul
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          sg
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          tw-kh
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          rus-mosc
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          jpn-tky
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          tw-tp
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          uae-dubai
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          idn-jakarta
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-84 emotion-85 emotion-86"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      可用区
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-81 emotion-82 emotion-2"
      span="10"
    >
      <div
        class="emotion-79 emotion-80"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5 emotion-6"
          type="button"
        >
          cn-zj-01
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-84 emotion-85 emotion-86"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      系列
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-81 emotion-82 emotion-2"
      span="10"
    >
      <div
        class="emotion-79 emotion-80"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5 emotion-6"
          type="button"
        >
          系列1
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          系列2
        </button>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-84 emotion-85 emotion-86"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      网络增强
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-81 emotion-82 emotion-2"
      span="10"
    >
      <div
        class=" emotion-134 emotion-135"
      >
        <div
          class="emotion-132 emotion-133"
        >
          <span
            class="emotion-124 emotion-125"
          >
            ON
          </span>
          <span
            class="emotion-126 emotion-127"
          >
            OFF
          </span>
          <span
            class="emotion-130 emotion-131"
          >
            <span
              class="emotion-128 emotion-129"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row uc-fe-form-item emotion-84 emotion-85 emotion-86"
  >
    <div
      class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
      span="2"
    >
      镜像
    </div>
    <div
      class="uc-fe-col uc-fe-form-controller emotion-81 emotion-82 emotion-2"
      span="10"
    >
      <div
        class="emotion-79 emotion-80"
      >
        <button
          checked=""
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-5 emotion-6"
          type="button"
        >
          标准
        </button>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button emotion-3 emotion-4 emotion-9 emotion-6"
          type="button"
        >
          自制
        </button>
      </div>
      <div
        class=" emotion-161 emotion-162"
      >
        <div>
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-158 emotion-159 emotion-6"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down emotion-155 emotion-156 emotion-157"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary emotion-169 emotion-6"
    type="button"
  >
    submit
  </button>
</form>
`;
